@@ -1399,7 +1399,7 @@ void SPVM_OPCODE_BUILDER_build_opcode_array(SPVM_COMPILER* compiler) {
                           int32_t index_index = SPVM_OP_get_my_index(compiler, op_assign_from->first->last);
                           
                           opcode.operand0 = index_out;
-                          opcode.operand1 = ((uint32_t)type->basic_type->id + ((uint32_t)type->dimension << 24));
+                          opcode.operand1 = ((uint32_t)type->basic_type->id + ((uint32_t)type->dimension - 1 << 24));
                           opcode.operand2 = index_index;
 
                           SPVM_OPCODE_ARRAY_push_opcode(compiler, opcode_array, &opcode);
