@@ -1337,12 +1337,12 @@ SPVM_VALUE SPVM_RUNTIME_call_sub_vm(SPVM_ENV* env, int32_t sub_id, SPVM_VALUE* a
       }
       case SPVM_OPCODE_C_ID_NEW_MULTI_ARRAY: {
         int32_t basic_type_id = (uint32_t)opcode->operand1 & 0xFFFFFF;
-        int32_t dimension  = (uint32_t)opcode->operand1 >> 24;
+        int32_t element_dimension  = (uint32_t)opcode->operand1 >> 24;
         
         // length
         int32_t length = *(SPVM_VALUE_int*)&vars[opcode->operand2];
         
-        void* object = env->new_multi_array(env, basic_type_id, dimension, length);
+        void* object = env->new_multi_array(env, basic_type_id, element_dimension, length);
         
         // Set object
         SPVM_RUNTIME_C_INLINE_OBJECT_ASSIGN((void**)&vars[opcode->operand0], object);
